# shapeships-engine

./: .gitignore  README.md  pyproject.toml
src/shapeships_engine/: Game.py  Phase.py  Player.py  main.py  ships.py
tests/: test_game.py  test_main.py
