[project]
name = "shapeships_engine"
version = "0.0.2"
authors = [
  { name="Matt Kershaw", email="matt@kershaw.org" },
]
description = "An engine for shapeships by Judd Madden"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/Erniemist/shapeships-engine"
Issues = "https://github.com/Erniemist/shapeships-engine/issues"